--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <body>
     <div align="center">
       <img src="1000043579.png">
-      <h1>Welcome to the world of Angies Moonlight station! Welcome to Flavor on Wheels, where every bite is a journey! Our food truck serves up a fusion of global flavors, 
+      <br>
+      <br>
+      <h1><font face="Arial,helvetica">Welcome to the world of Angies Moonlight station! Welcome to Flavor on Wheels, where every bite is a journey! Our food truck serves up a fusion of global flavors, 
           combining the freshest ingredients with a dash of creativity. From sizzling tacos to gourmet burgers and refreshing beverages, we’ve got something to satisfy every craving. 
           Follow the aroma and let us bring the taste of adventure to your plate! :)</h1>
-      <h2>There is plenty to explore here...</h2>
+      <br>
+      <h2>Exciting website coming soon...</h2>
       <h2>Stop by our truck and experience in person... :) :) :) </h2>
     </div>
   </body>
